--- a/src/components/PageContent/PersonComponent.module.scss
+++ b/src/components/PageContent/PersonComponent.module.scss
@@ -16,7 +16,6 @@
   width: 100%;
   height: auto;
   object-fit: cover;
-  height: 400px;
 }
 
 .name {
@@ -57,4 +56,70 @@
   background-color: #353f4f;
   bottom: -1px;
   left: 0;
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    display: flex;
+    // border-bottom: 1px solid #e2e2e2;
+    padding-bottom: 20px;
+    max-width: 600px;
+    margin: 0 auto 40px;
+  }
+
+  .photo {
+    margin: 0 30px 0 0;
+    max-width: 150px;
+    max-height: 250px;
+    object-fit: fill;
+
+    img {
+      height: auto;
+    }
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    height: 150px;
+  }
+  .position,
+  .name {
+    text-align: left;
+  }
+}
+
+@media (max-width: 600px) {
+  .wrapper {
+    display: block;
+    border-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  .photo {
+    max-width: 300px;
+    max-height: 400px;
+    margin: 0 auto 15px;
+  }
+  .info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: initial;
+    max-width: 70%;
+    height: auto;
+    margin: 0 auto;
+
+    * {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .info {
+    max-width: 90%;
+  }
 }
