--- a/src/pages/general-info/GeneralInfo.module.scss
+++ b/src/pages/general-info/GeneralInfo.module.scss
@@ -49,3 +49,11 @@
     margin-bottom: 20px;
   }
 }
+
+// .table thead {
+//   background-color: var(--primary-color);
+// }
+
+// .table td {
+//   border: 1px solid #000;
+// }
