--- a/src/components/AdministrationCard/AdministrationCard.module.scss
+++ b/src/components/AdministrationCard/AdministrationCard.module.scss
@@ -79,9 +79,31 @@
   left: 0;
 }
 
+@media (max-width: 1150px) {
+  .administration__item {
+    flex-basis: calc(33.333333333% - 20px);
+    width: calc(33.333333333% - 20px);
+    max-width: 280px;
+  }
+}
+
 @media (max-width: 1024px) {
   .administration__item {
-    max-width: initial;
-    flex-basis: auto;
+    max-width: 250px;
+  }
+}
+@media (max-width: 940px) {
+  .administration__item {
+    flex-basis: calc(50% - 20px);
+    width: calc(50% - 20px);
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 640px) {
+  .administration__item {
+    flex-basis: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: 300px;
   }
 }
