--- a/src/components/PageContent/PanoramsComponent.module.scss
+++ b/src/components/PageContent/PanoramsComponent.module.scss
@@ -32,3 +32,15 @@
   object-fit: cover;
   transition: all 0.3s ease-in-out;
 }
+
+@media (max-width: 540px) {
+  .title {
+    font-size: 28px !important;
+  }
+}
+
+@media (max-width: 425px) {
+  .title {
+    font-size: 24px !important;
+  }
+}
