--- a/src/components/PageContent/TwoColumnWithImage.module.scss
+++ b/src/components/PageContent/TwoColumnWithImage.module.scss
@@ -33,3 +33,120 @@
   max-width: 720px;
   border-radius: 10px;
 }
+
+@media (max-width: 1024px) {
+  .wrapper {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+  .content {
+    max-width: 60%;
+
+    p {
+      text-align: justify !important;
+    }
+  }
+
+  .left-image,
+  .right-image {
+    margin: 20px 0;
+  }
+
+  .image-box {
+    max-width: 60%;
+  }
+}
+
+@media (max-width: 840px) {
+  .wrapper {
+    margin: 60px 0;
+  }
+
+  .content,
+  .image-box {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    margin: 40px 0;
+  }
+
+  .left-image,
+  .right-image {
+    margin: 20px 0;
+  }
+
+  .content,
+  .image-box {
+    max-width: 100%;
+  }
+  .content h1 {
+    font-size: 32px;
+  }
+  .content h2 {
+    font-size: 30px;
+  }
+  .content h3 {
+    font-size: 28px;
+  }
+  .content h4 {
+    font-size: 26px;
+  }
+  .content h5 {
+    font-size: 24px;
+  }
+  .content h6 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 640px) {
+  .content h1 {
+    font-size: 30px;
+  }
+  .content h2 {
+    font-size: 28px;
+  }
+  .content h3 {
+    font-size: 26px;
+  }
+  .content h4 {
+    font-size: 24px;
+  }
+  .content h5 {
+    font-size: 22px;
+  }
+  .content h6 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 540px) {
+  .content h1 {
+    font-size: 28px;
+  }
+  .content h2 {
+    font-size: 26px;
+  }
+  .content h3 {
+    font-size: 24px;
+  }
+  .content h4 {
+    font-size: 22px;
+  }
+  .content h5 {
+    font-size: 20px;
+  }
+  .content h6 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 425px) {
+  .content p {
+    font-size: 18px !important;
+  }
+}
