--- a/src/components/GroupSchedule/GroupSchedule.module.scss
+++ b/src/components/GroupSchedule/GroupSchedule.module.scss
@@ -6,12 +6,12 @@
 }
 
 .wrapper * {
-  font-family: "GilroyRegular", sans-serif;
+  font-family: 'GilroyRegular', sans-serif;
 }
 
 .section-name {
   font-size: 24px;
-  font-family: "GilroyBold", sans-serif;
+  font-family: 'GilroyBold', sans-serif;
   background-color: #f9f9f9;
   color: var(--primary-color);
   text-align: center;
@@ -44,7 +44,7 @@
   top: 0;
   left: 0;
   opacity: 0;
-  content: "";
+  content: '';
   position: absolute;
   width: calc(100% - 6px);
   height: calc(100% - 6px);
@@ -63,4 +63,73 @@
   margin-bottom: 20px;
   font-size: 32px;
   color: #000;
+}
+
+@media (max-width: 1024px) {
+  .lg-title {
+    font-size: 36px;
+  }
+  .md-title {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 840px) {
+  .lg-title {
+    font-size: 32px;
+  }
+  .md-title {
+    font-size: 28px;
+  }
+
+  .section-name {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 768px) {
+  .lg-title {
+    font-size: 28px;
+  }
+  .md-title {
+    font-size: 24px;
+  }
+
+  .section-name {
+    font-size: 20px;
+  }
+  .group-item {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 640px) {
+  .lg-title {
+    font-size: 26px;
+  }
+  .md-title {
+    font-size: 22px;
+  }
+
+  .section-name {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 425px) {
+  .lg-title {
+    font-size: 24px;
+  }
+  .md-title {
+    font-size: 20px;
+  }
+
+  .section-name {
+    font-size: 18px;
+  }
+
+  .group-item {
+    font-size: 16px;
+  }
 }
