--- a/src/pages/structure/cmks/[smks_slug]/Teacher.module.scss
+++ b/src/pages/structure/cmks/[smks_slug]/Teacher.module.scss
@@ -25,14 +25,11 @@
   align-items: center;
   justify-content: center;
   height: 54px;
-  //   width: 200px;
   font-family: GilroyBold, sans-serif;
   padding: 30px;
   font-size: 20px;
   font-weight: 500;
-  //   border-radius: 99px;
   cursor: pointer;
-  //   transition: color 0.15s ease-in;
 }
 
 .active-tab {
@@ -41,7 +38,7 @@
   background-color: var(--gray-color);
 }
 .active-tab::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
@@ -52,6 +49,10 @@
 
 .content {
   display: flex;
+}
+
+.lessons {
+  margin-bottom: 10px;
 }
 
 .img {
@@ -68,4 +69,66 @@
 .mb-10 {
   margin-bottom: 10px;
   display: block;
+}
+
+@media (max-width: 840px) {
+  .tab {
+    height: 54px;
+    padding: 25px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .tab {
+    height: 54px;
+    padding: 20px 15px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 640px) {
+  .tab {
+    height: 54px;
+    padding: 20px 15px;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .img {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 540px) {
+  .tab {
+    height: 54px;
+    padding: 20px 10px;
+    font-size: 16px;
+  }
+
+  .content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .general-information {
+    text-align: center;
+  }
+
+  .lessons {
+    list-style: none;
+  }
+
+  .img {
+    margin: 0 0 20px 0;
+  }
+}
+
+@media (max-width: 425px) {
+  .tab {
+    height: 54px;
+    padding: 20px 5px;
+    font-size: 14px;
+  }
 }
