--- a/src/components/MainScreen/MainScreen.module.scss
+++ b/src/components/MainScreen/MainScreen.module.scss
@@ -57,8 +57,8 @@
 
 .main-screen__logo {
   width: 180px;
-  -webkit-filter: drop-shadow(0 0 0 #000000);
-  filter: drop-shadow(0 0 0 #000000);
+  -webkit-filter: drop-shadow(0 0px 1px #000000);
+  filter: drop-shadow(0 0px 1px #000000);
 }
 
 .main-screen__title {
