--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -558,3 +558,12 @@ body {
     padding: 0 20px;
   }
 }
+
+/* fancybox */
+@media (max-width: 390px) {
+  .fancybox__container {
+    transform: translate3d(2.44141e-5px, 0px, 0px) scale(0.997951);
+    width: 100vw;
+    height: 100vh;
+  }
+}
