--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -87,10 +87,10 @@
   margin-left: 10px;
 }
 
-.social__list-item {
-  border: 3px solid #fff;
-  border-radius: 8px;
-}
+// .social__list-item {
+// border: 3px solid #fff;
+// border-radius: 8px;
+// }
 
 .social__list-item a {
   padding: 2px;
@@ -114,7 +114,8 @@
 
 .social__list-icon {
   display: inline-block;
-  width: 20px;
+  width: 22px;
+  height: auto;
 }
 
 /* header nav */
