--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -234,6 +234,7 @@
 .header__nav-submenu-item {
   cursor: pointer;
   color: #000;
+  // color: #002397;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -248,6 +249,7 @@
 .header__nav-submenu-item:hover {
   background: #e7e7e7;
   color: #333;
+  // color: #002397;
 }
 
 .main-menu-triangle {
@@ -266,6 +268,7 @@
 
 .header__nav-item .header__nav-submenu .main-menu-triangle svg path {
   fill: #000000;
+  // fill: #002397;
 }
 
 .submenu-triangle {
