--- a/src/pages/general-info/GeneralInfo.module.scss
+++ b/src/pages/general-info/GeneralInfo.module.scss
@@ -6,7 +6,7 @@
 }
 
 .col {
-  min-width: 50%;
+  min-width: calc(50% - 10px);
 }
 
 .col + .col {
@@ -50,10 +50,25 @@
   }
 }
 
-// .table thead {
-//   background-color: var(--primary-color);
-// }
+@media (max-width: 840px) {
+  .wrapper {
+    flex-wrap: wrap;
+  }
+  .col {
+    min-width: 100%;
+  }
+  .col + .col {
+    margin: 40px 0 0 0;
+  }
+}
 
-// .table td {
-//   border: 1px solid #000;
-// }
+@media (max-width: 540px) {
+  .principal {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .info {
+    text-align: center;
+  }
+}
