--- a/src/components/LoadingSpinner/LoadingSpinner.module.scss
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.scss
@@ -9,7 +9,7 @@
   animation: spin 500ms infinite linear;
 
   position: absolute;
-  transform: translate(-50%, -50%);
+  // transform: translate(-50%, -50%);
   top: 40%;
   left: 50%;
 }
